# veritasclin-gemma4

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FIXPLAN.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: architecture.md  demo_script.md  evaluation.md  evidence_packs.md  judging_strategy.md  safety.md  submission_checklist.md
examples/: sample_questions.json
examples/cannabis_neuropathic_pain_pack/: baseline_comparison.json  caution_map.json  claim_ledger.csv  dossier.md  pack.json
examples/dengue_severe_adults_pack/: baseline_comparison.json  caution_map.json  claim_ledger.csv  dossier.md  pack.json
examples/malaria_severe_adults_pack/: baseline_comparison.json  caution_map.json  claim_ledger.csv  dossier.md  pack.json
examples/maternal_health_pph_pack/: caution_map.json  (+4 more)
scripts/: build_real_packs.py  build_v02_packs.py
tests/: conftest.py  test_baseline_comparison.py  test_brand_assets.py  test_caution_mapper.py  test_claim_extractor.py  test_claim_verifier.py  test_evidence_ranker.py  test_freshness_scorer.py  test_function_calling_query_agent.py  test_image_context_agent.py  test_markdown_export.py  test_offline_qa.py  test_pack_builder.py  test_pack_loader.py  test_pico_agent.py  test_pubmed_integration.py  test_pubmed_query_builder.py  test_safety_guard.py  test_workflow_mock.py
veritasclin/: __init__.py  config.py
veritasclin_field.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+59 files in other folders)
