[project]
name = "veritasclin-field"
version = "0.1.0"
description = "Offline-first, audit-ready medical evidence packs powered by Gemma 4."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

